--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
+  width: 100vw;
+  position: relative;
 }
 .game,
 #gameover {
@@ -43,6 +45,26 @@ body {
   align-items: center;
   justify-content: center;
 }
+#start{
+    background-color: rgba(0, 0, 0, 0.9);
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  visibility: visible;
+  z-index: 1;
+}
+#startModal {
+    background-color: aqua;
+  width: 40%;
+  height: 60%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+}
 .wall {
   height: 60%;
   background-color: white;
@@ -58,36 +80,62 @@ body {
   height: 75%;
   margin: 10px;
 }
+.front, .inside{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: rgb(54, 69, 79);
+    border-radius: 60px;
+}
+.inside {       
+    border: 60px inset grey;
+}
 .front {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 20px inset;
+    transform-origin: right;
+    transition: all 0.5s ease-in-out;
+} 
+#hide {
   display: flex;
-  height: 600px;
-  width: 700px;
-  margin-top: 10px;
-  margin-left: 15%;
-  background-image: url(images/safe2.png);
-  background-position: center;
-  background-size: 1400px 600px;
-  filter: drop-shadow(30px 40px 18px black);
-  justify-content: center;
-  align-items: center;
-  /*border: 20px inset;*/
-  backdrop-filter: ;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
 }
+.openSafe {
+    transform: perspective(1200px) rotateY(105deg);  
+}
+.handle {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    background-color: rgb(54, 69, 79);
+    margin-right: 100px;
+    margin-left: 70px;
+    border: 5px inset;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#dial {
+    cursor: pointer;
+}  */
 .container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  width: 10em;
-  height: 45%;
-  background-color: rgb(54, 69, 79);
-  border-radius: 5%;
-  /*border: 5px outset;*/
-  margin-left: 60%;
-  margin-bottom: 10%;
-  padding: 5px;
-  box-shadow: inset 2px 2px 5px rgba(255, 255, 255, 0.4),
-    4px 4px 10px rgba(0, 0, 0, 0.7);
-}
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 10em;
+    height: 75%;
+    background-color: rgb(54, 69, 79);
+    background-color: red;
+    border-radius: 5%;
+    border: 20px outset red;
+    padding: 5px;
+    box-shadow: inset 2px 2px 5px rgba(255, 255, 255, 0.4), 
+            4px 4px 10px rgba(0, 0, 0, 0.7);
+} 
 .indicators {
   width: 30%;
   display: flex;
@@ -97,18 +145,22 @@ body {
 #red {
   width: 20px;
   height: 10px;
-  background-color: rgb(201, 11, 11);
+  background-color: rgb(48, 18, 18);
   border-radius: 5px;
 }
 #green {
   width: 20px;
   height: 10px;
-  background-color: rgb(43, 139, 43);
+  background-color: rgb(41, 65, 41);
   border-radius: 5px;
 }
 .output {
+    width: 100%;
   display: flex;
-  margin: auto 2px auto 2px;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: 5px 2px auto 2px;
   margin-left: 15px;
 }
 .output p {
@@ -155,6 +207,9 @@ input {
 .keypad {
   margin: 5px auto 5px auto;
 }
+.previousGuess {
+    margin-left: 20px;
+}
 video {
   position: fixed;
   top: 50%;
@@ -168,5 +223,14 @@ video {
   background-size: cover;
   transition: 1s opacity;
 }
-image {
+.controls button, #startModal button {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background-color: blue;
+    color: yellow;
+    font-weight: 700;
+    font-size: 18px;
+    margin: 30px 5px 0 5px;
+    cursor: pointer;
 }
