--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ body {
   height: 100vh;
   width: 100vw;
   position: relative;
+  background: rgb(160,210,232);
+background: linear-gradient(180deg, rgba(160,210,232,1) 17%, rgba(132,88,179,1) 48%, rgba(73,77,95,1) 76%);
 }
 .game,
 #gameover {
@@ -25,7 +27,8 @@ body {
 #timer {
   font-size: 40px;
   text-align: end;
-  padding: 20px;
+  padding: 20px;;
+  font-weight: 700;
 }
 #gameover {
   background-color: rgba(0, 0, 0, 0.9);
@@ -46,7 +49,7 @@ body {
   justify-content: center;
 }
 #start{
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: rgba(0, 0, 0, 0.5);
   height: 100%;
   width: 100%;
   display: flex;
@@ -56,9 +59,10 @@ body {
   z-index: 1;
 }
 #startModal {
-    background-color: aqua;
-  width: 40%;
-  height: 60%;
+    background: url(images/Thief.png);
+    background-size: cover;
+  width: 70%;
+  height: 70%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -67,7 +71,6 @@ body {
 }
 .wall {
   height: 60%;
-  background-color: white;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -83,8 +86,8 @@ body {
 .front, .inside{
     width: 100%;
     height: 100%;
-    position: absolute;
-    background-color: rgb(54, 69, 79);
+    position: absolute;    
+    background-color: #494d5f;
     border-radius: 60px;
 }
 .inside {       
@@ -97,6 +100,7 @@ body {
     border: 20px inset;
     transform-origin: right;
     transition: all 0.5s ease-in-out;
+
 } 
 #hide {
   display: flex;
@@ -110,8 +114,8 @@ body {
 .handle {
     width: 150px;
     height: 150px;
-    border-radius: 50%;
-    background-color: rgb(54, 69, 79);
+    border-radius: 50%; 
+    background-color: #494d5f;
     margin-right: 100px;
     margin-left: 70px;
     border: 5px inset;
@@ -121,17 +125,17 @@ body {
 }
 #dial {
     cursor: pointer;
-}  */
+}  
 .container {
-    display: flex;
+    /*display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
     width: 10em;
-    height: 75%;
+    height: 75%;*/
     background-color: rgb(54, 69, 79);
-    background-color: red;
     border-radius: 5%;
-    border: 20px outset red;
+    border: 5px inset;
     padding: 5px;
     box-shadow: inset 2px 2px 5px rgba(255, 255, 255, 0.4), 
             4px 4px 10px rgba(0, 0, 0, 0.7);
@@ -155,17 +159,17 @@ body {
   border-radius: 5px;
 }
 .output {
-    width: 100%;
+  /*width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  margin: 5px 2px auto 2px;
-  margin-left: 15px;
+  padding-right: 10px;
+  margin-right: 25px;*/
 }
 .output p {
-  text-align: right;
-  font-size: 25px;
+  /*text-align: right;
+  font-size: 25px;*/
 }
 #display {
   background-color: chartreuse;
@@ -209,6 +213,9 @@ input {
 }
 .previousGuess {
     margin-left: 20px;
+    width: 20%;
+    height: 200px;
+    background-color: aqua;
 }
 video {
   position: fixed;
@@ -223,14 +230,15 @@ video {
   background-size: cover;
   transition: 1s opacity;
 }
+
 .controls button, #startModal button {
     width: 60px;
     height: 60px;
     border-radius: 50%;
-    background-color: blue;
+    background-color:#451875;
     color: yellow;
     font-weight: 700;
     font-size: 18px;
     margin: 30px 5px 0 5px;
-    cursor: pointer;
+    border: 2px inset #451875;
 }
