--- a/style.css
+++ b/style.css
@@ -17,118 +17,33 @@ body {
   background-image: url(images/gameBackground.png);
   filter: saturate(8);
 }
-
-.game,
-#gameover {
-  position: absolute;
-}
 .game {
   height: 100%;
   width: 100%;
 }
-#timer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 40px;
-  padding: 20px;;
-  font-weight: 700;
-  margin-left: 40px;
-  border-radius: 50%;
-  height: 100px;
-  width: 100px;
-  border: 5px solid #451875;
-  background-color: #aaafdd;  
-}
-#gameover {
-  background-color: rgb(3, 0, 14);
-  height: 100%;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  visibility: hidden;
-  filter: saturate(4);
-  
-}
-.gameoverModal {
-  background-color: rgba(0, 0, 0, 0.1);
-  width: 40%;
-  height: 60%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  
-  background-color: rgba(72, 156, 224, 0.9);
-  box-shadow: inset 2px 2px 5px rgba(225, 225, 226, 0.4), 
-            4px 4px 10px rgba(123, 26, 26, 0.7);
-  border-radius: 5px;
-}
-.gameoverModal, .cuffImage {
+.game, #gameover {
   position: absolute;
-}
-.gameoverText {
-  z-index: 1;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-.gameoverText h1 {
-  color: rgb(160,210,232);
-  font-size: 80px;
-}
-#start {
-    background-color: rgba(0, 0, 0, 0.9);
-  height: 100%;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 1;
-}
-#startModal {
-    background: url(images/Thief.png);
-    background-size: cover;
-    filter: drop-shadow(8px 8px 10px gray);
-    border-radius: 10px;
-    box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.4), 
-            4px 4px 10px rgba(0, 0, 0, 0.7);
-  width: 70%;
-  height: 70%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 30px;
-}
-.modalContent {
-  background-color: rgba(227, 232,241, 0.8);
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 30px;
-}
-.title {
-  text-align: center;
-  font-size: 50px;
-  color:#451875;
-}
-hr {
-  background-color: yellow;
-  height: 5px;
-  width: 50%;
 }
 .wall {
   height: 60%;
   display: flex;
   margin-left: 60px;
-  align-items: center;
+align-items: center;
+}
+.lastGuess {
+  width: 20%;
+  height: 400px;
+  margin-right: 80px;
+background-color: rgba(227, 232, 241, 0.8);
+border-radius: 20px;
+border: 2px solid #451875;
+  padding: 5px;
+}
+.lastGuess h3 {
+  color: #494d5f;
+  text-align: center;
+  margin: auto;
+  font-size: 50px;
 }
 .safe {
   position: relative;
@@ -140,31 +55,31 @@ hr {
   box-shadow: inset 2px 2px 20px rgba(0, 0, 0, 0.4), 
             4px 4px 10px rgba(0, 0, 0, 0.7);
 }
-.front, .inside{
-    width: 100%;
-    height: 100%;
-    position: absolute;    
-  box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.4), 
-  4px 4px 10px rgba(0, 0, 0, 0.7);
-}
-.inside {       
-    border: 60px inset grey;
-    background-color: grey;
-}
 .safeContent {
   position: relative;
 }
 .safeContent img {
   position: absolute;
 }
+.inside {       
+  border: 60px inset grey;
+  background-color: grey;
+}
+.front, .inside{
+  width: 100%;
+  height: 100%;
+  position: absolute;    
+box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.4), 
+4px 4px 10px rgba(0, 0, 0, 0.7);
+}
 .front {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 20px inset;
-    transform-origin: right;
-    transition: all 0.5s ease-in-out;
-    background-color: #28333b;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 20px inset;
+  transform-origin: right;
+  transition: all 0.5s ease-in-out;
+  background-color: #28333b;
 } 
 #hide {
   display: flex;
@@ -172,36 +87,27 @@ hr {
     align-items: center;
     width: 100%;
 }
-.openSafe {
-    transform: perspective(1200px) rotateY(105deg);  
-}
 .handle {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%; background-color: #28333b;
-    margin-right: 100px;
-    margin-left: 70px;
-    border: 5px inset;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%; background-color: #28333b;
+  margin-right: 100px;
+  margin-left: 70px;
+  border: 5px inset;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 #dial {
-    cursor: pointer;
-}  
+  cursor: pointer;
+}
 .container {
-    /*display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    width: 10em;
-    height: 75%;*/
-    background-color: rgb(54, 69, 79);
-    border-radius: 5%;
-    border: 5px inset;
-    padding: 5px;
-    box-shadow: inset 2px 2px 5px rgba(255, 255, 255, 0.4), 
-            4px 4px 10px rgba(0, 0, 0, 0.7);
+  background-color: rgb(54, 69, 79);
+  border-radius: 5%;
+  border: 5px inset;
+  padding: 5px;
+  box-shadow: inset 2px 2px 5px rgba(255, 255, 255, 0.4), 
+          4px 4px 10px rgba(0, 0, 0, 0.7);
 } 
 .indicators {
   width: 30%;
@@ -221,43 +127,6 @@ hr {
   background-color: rgb(41, 65, 41);
   border-radius: 5px;
 }
-.output {
-  /*width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  padding-right: 10px;
-  margin-right: 25px;*/
-}
-.output p {
-  /*text-align: right;
-  font-size: 25px;*/
-}
-#display {
-  background-color: chartreuse;
-  width: 5.4em;
-  padding: 2px;
-  height: 40px;
-  margin: auto auto 10px 5px;
-}
-#numbers {
-  font-size: 1.5em;
-  font-weight: 600;
-  width: 35px;
-  height: 35px;
-  background-color: rgb(99, 112, 121);
-  margin: 2px auto 0 auto;
-  border-radius: 50%;
-  border: none;
-  box-shadow: inset 1px 1px 2px rgba(255, 255, 255, 0.3),
-    1px 1px 5px rgba(54, 69, 79, 0.7);
-  cursor: pointer;
-}
-#numbers:hover {
-  background-color: #000;
-  color: silver;
-}
 input {
   height: 45px;
   width: 30px;
@@ -276,48 +145,41 @@ input {
 .keypad {
   margin: 5px auto 5px auto;
 }
-.lastGuess {
-    width: 20%;
-    height: 400px;
-    margin-right: 80px;
-  background-color: rgba(227, 232, 241, 0.8);
-  border-radius: 20px;
-  border: 2px solid #451875;
+#numbers {
+  font-size: 1.5em;
+  font-weight: 600;
+  width: 35px;
+  height: 35px;
+  background-color: rgb(99, 112, 121);
+  margin: 2px auto 0 auto;
+  border-radius: 50%;
+  border: none;
+  box-shadow: inset 1px 1px 2px rgba(255, 255, 255, 0.3),
+    1px 1px 5px rgba(54, 69, 79, 0.7);
+  cursor: pointer;
 }
-.lastGuess h3 {
-  color: #494d5f;
-  text-align: center;
-  margin: auto;
+#numbers:hover {
+  background-color: #000;
+  color: silver;
 }
-video {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  min-width: 100%;
-  min-height: 100%;
-  width: auto;
-  height: auto;
-  z-index: -100;
-  transform: translateX(-50%) translateY(-50%);
-  background-size: cover;
-  transition: 1s opacity;
+.go {
+  background-color: green; 
+  font-size: 18px; 
+  padding: 0;
 }
-
-.controls button, #startModal button, .gameoverText button {
-    width: 60px;
-    height: 60px;
-    border-radius: 10px;
-    background-color:#451875;
-    color: yellow;
-    font-weight: 700;
-    font-size: 18px;
-    margin: 30px 5px 0 5px;
-    border: 2px inset #451875;
-    cursor: pointer;
-}
-.controls {
+#timer {
   display: flex;
   justify-content: center;
+  align-items: center;
+  font-size: 40px;
+  padding: 20px;;
+  font-weight: 700;
+  margin-left: 40px;
+  border-radius: 50%;
+  height: 100px;
+  width: 100px;
+  border: 5px solid #451875;
+  background-color: #aaafdd;  
 }
 #previousGuess {
   font-size: 30px;
@@ -329,6 +191,118 @@ video {
   text-align: center;
   background-color: rgba(170, 174, 181, 0.8);
 }
+#oldGuesses {
+  font-size: 20px; 
+  width: 100%;
+}
+.controls {
+  display: flex;
+  justify-content: center;
+}.controls button, #startModal button, .gameoverText button {
+  width: 60px;
+  height: 60px;
+  border-radius: 10px;
+  background-color:#451875;
+  color: yellow;
+  font-weight: 700;
+  font-size: 18px;
+  margin: 30px 5px 0 5px;
+  border: 2px inset #451875;
+  cursor: pointer;
+}
 .controls button {
   background-color: #aaafdd;  
 }
+#gameover {
+  background-color: rgb(3, 0, 14);
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  visibility: hidden;
+  filter: saturate(4);
+}
+.gameoverModal {
+  background-color: rgba(0, 0, 0, 0.1);
+  width: 40%;
+  height: 60%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  background-color: rgba(72, 156, 224, 0.9);
+  box-shadow: inset 2px 2px 5px rgba(225, 225, 226, 0.4), 
+            4px 4px 10px rgba(123, 26, 26, 0.7);
+  border-radius: 5px;
+}
+.gameoverModal, .cuffImage {
+  position: absolute;
+}
+.gameoverText {
+  z-index: 1;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.gameoverText h1 {
+  color: white;
+  font-size: 80px;
+}
+.gameoverText h2 {
+  color: white;
+}
+.gameoverText button {
+  width: 80px;
+  text-align: center;
+}
+#start {
+    background-color: rgba(0, 0, 0, 0.9);
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+}
+#startModal {
+    background: url(images/Thief.png);
+    background-size: cover;
+    filter: drop-shadow(8px 8px 10px gray);
+    border-radius: 10px;
+    box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.4), 
+            4px 4px 10px rgba(0, 0, 0, 0.7);
+    width: 70%;
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 30px;
+}
+.modalContent {
+    background-color: rgba(227, 232,241, 0.8);
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 30px;
+}
+.title {
+  text-align: center;
+  font-size: 50px;
+  color:#451875;
+}
+hr {
+  background-color: yellow;
+  height: 5px;
+  width: 50%;
+}
+.openSafe {
+    transform: perspective(1200px) rotateY(105deg);  
+}
+
